main activity update #2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,29 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:id="@+id/imgBtnCamera"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/button_design"
+        android:layout_gravity="end"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="96dp"
+        app:srcCompat="@drawable/painting_frame_icon" />
+
     <TextView
         android:id="@+id/textViewResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="32dp"
         android:layout_gravity="center"
         android:textSize="48sp"
         android:fontFamily="@font/comicbd"
@@ -23,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/button_design"
         android:textSize="24sp"
         android:textColor="@color/btnTextColor"
