--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,45 +7,44 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_camera"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="12dp"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
-
     <ImageView
         android:id="@+id/img_view"
         android:layout_width="256dp"
         android:layout_height="256dp"
         android:layout_gravity="center"
         android:layout_marginTop="96dp"
-        app:srcCompat="@drawable/background_img" />
+        android:background="#EEEEEE" />
 
     <TextView
         android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_gravity="center"
-        android:textSize="48sp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/oswald_medium"
+        tools:text="Result"
         android:textColor="@color/textViewColor"
-        android:text="Result" />
+        android:textSize="48sp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_scanner"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="44dp"
-        android:background="@drawable/button_design"
-        android:textSize="24sp"
-        android:textColor="@color/btnTextColor"
         android:fontFamily="@font/oswald_medium"
-        android:text="Scan" />
+        android:text="@string/scan"
+        android:textSize="24sp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/camera_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
 
 
 </LinearLayout>
