--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +11,7 @@
         android:id="@+id/img_view"
         android:layout_width="256dp"
         android:layout_height="256dp"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
         android:background="#EEEEEE" />
 
@@ -19,19 +19,20 @@
         android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_below="@id/img_view"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/oswald_medium"
-        tools:text="Result"
         android:textColor="@color/textViewColor"
-        android:textSize="48sp" />
+        android:textSize="48sp"
+        tools:text="Result" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_scanner"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_below="@id/text_view_result"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/oswald_medium"
         android:text="@string/scan"
@@ -41,10 +42,14 @@
         android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:tint="@android:color/white"
-        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_photo_camera_black_24dp"
+        android:tint="@android:color/white" />
 
 
-</LinearLayout>
+</RelativeLayout>
