--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -38,6 +39,20 @@
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
         android:text="@string/scan"
+        android:textSize="24sp"
+        app:cornerRadius="90dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/data_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/scan_button"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/oswald_medium"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        android:text="Data"
         android:textSize="24sp"
         app:cornerRadius="90dp" />
 
