--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         app:cornerRadius="90dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/data_button"
+        android:id="@+id/stats_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
         android:fontFamily="@font/oswald_medium"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="@string/data"
+        android:text="@string/stats"
         android:textSize="24sp"
         app:cornerRadius="90dp" />
 
