--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,14 +43,12 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/scan_button"
-        android:layout_width="wrap_content"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/result_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/oswald_medium"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
         android:text="@string/scan"
         android:textSize="24sp"
         app:cornerRadius="90dp" />
@@ -58,13 +56,11 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/stats_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="wrap_content"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/scan_button"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/oswald_medium"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
         android:text="@string/stats"
         android:textSize="24sp"
         app:cornerRadius="90dp" />
